--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
     }
     productFlavors {
     }
+    android.applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            output.outputFile = new File(output.outputFile.parent, + "点将体育-v" +
+                    defaultConfig.versionName + "-" + defaultConfig.versionCode + ".apk" );
+        }
+    }
 }
 
 dependencies {
