--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,6 +160,10 @@
             android:windowSoftInputMode="adjustResize"
             android:exported="false" >
         </activity>
+        <service
+            android:name="com.sina.weibo.sdk.net.DownloadService"
+            android:exported="false">
+        </service>
         <!-- wechat callback-->
         <activity
             android:name=".wxapi.WXEntryActivity"
