--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '21.1.1'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId "com.djtiyu.m.djtiyu"
         minSdkVersion 14
-        targetSdkVersion 22
-        versionCode 5
-        versionName '1.1'
+        targetSdkVersion 21
+        versionCode 9
+        versionName '1.3'
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
         }
@@ -35,8 +35,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:21.1.2'
     compile 'com.baoyz.actionsheet:library:1.1.7'
     compile 'com.google.code.gson:gson:2.7'
     compile 'cn.jiguang:jpush:2.1.9'
