--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.djtiyu.m.djtiyu"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 9
-        versionName '1.3'
+        versionCode 10
+        versionName '1.31'
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
         }
@@ -41,11 +41,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'cn.jiguang:jpush:2.1.9'
     compile files('libs/mta-sdk-1.6.2.jar')
-    compile files('libs/open_sdk_r5756.jar')
     compile files('libs/SocialSDK_QQZone_3.jar')
-    compile files('libs/SocialSDK_Sina.jar')
-    compile files('libs/SocialSDK_WeiXin_1.jar')
     compile files('libs/SocialSDK_WeiXin_2.jar')
-    compile files('libs/umeng_social_sdk.jar')
-    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile files('libs/SocialSDK_umengsina.jar')
+    compile files('libs/umeng_social_apiv6.0.0.jar')
+    compile files('libs/umeng_social_netv6.0.0.jar')
+    compile files('libs/umeng_social_viewv6.0.0.jar')
+    compile files('libs/SocialSDK_umengwx.jar')
 }
