--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "com.djtiyu.m.djtiyu"
         minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 10
-        versionName '1.31'
+        targetSdkVersion 23
+        versionCode 11
+        versionName '1.32'
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
         }
@@ -35,8 +35,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.1.2'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.baoyz.actionsheet:library:1.1.7'
     compile 'com.google.code.gson:gson:2.7'
     compile 'cn.jiguang:jpush:2.1.9'
